--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Picture:</strong>
-  <%= @portfolio.picture %>
+  <%= image_tag(@idea.picture_url, :width => 600) if @idea.picture.present? %>
 </p>
 
 <%= link_to 'Edit', edit_portfolio_path(@portfolio) %> |
