Added social media icons

--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -14,7 +14,14 @@
         Front-End Developer for LifeChurch.tv. I have been designing and building websites for the past 6 years 
         and love every minute of it. Passionate about Jesus and his Church, husband to my beautiful 
         bride, Brea, father to, Tenley-Kate and Callaway, and a sucker for a good cup of coffee. Be blessed!</p>
-      <p><a href="#">Email Justin</a></p>
+      <p>
+        <ul>
+          <li><a href="#"><i class="icon-mail"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+      </ul>
+      </p>
     </div>
 
     <div class="six columns">
@@ -25,8 +32,14 @@
         Mauris non eleifend ex. Quisque in dignissim nibh. Nullam dolor ante, 
         pulvinar a tincidunt in, sodales non sapien. Fusce at mi bibendum, vestibulum leo at,
         condimentum arcu. Maecenas tincidunt ligula nec imperdiet gravida.</p>
-
-      <p><a href="#">Email Brea</a></p>
+      <p>
+        <ul>
+          <li><a href="#"><i class="icon-mail"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+          <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+      </ul>
+      </p>
 
     </div>
 
