--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,21 +74,26 @@ a:hover {
   margin-bottom: 1em;
 }
 
-.about a {
+.about ul {
+  text-align: center;
+  list-style-type: none;
+}
+
+.about ul li {
+  display: inline-block;
+}
+  
+.about ul li a {
   color: $grey;
-  border: 1px solid $grey;
-  padding: 7px 18px;
   text-shadow: none;
-  border-radius: 3px;
   font-weight: 400;
-  font-size: 0.8em;
+  font-size: 1.2em;
   text-transform: uppercase;
+  margin: 0 10px;
 }
 
 .about a:hover {
-  background: $grey;
-  border: 1px solid $grey;
-  color: $white;
+  color: $gold;
 }
 
 img.about-photo {
